fixed the double scrollbar issue

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,4 +15,8 @@ html, body {
   font-style: normal;
 }
 
+body {
+  overflow: hidden; /* Hide scroll bars */
+}
+
 
